[package]
name = "nostr-caesar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nostr-caesar-server"
path = "src/server.rs"

[[bin]]
name = "nostr-caesar-test-client"
path = "src/client.rs"

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
