[package]
name = "nostr-caesar"
version = "0.1.0"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "A policy decider for nostr relays"
repository = "https://github.com/mikedilger/nostr-caesar"
readme = "README.md"
keywords = [ "nostr" ]
license = "MIT"

[[bin]]
name = "nostr-caesar-server"
path = "src/server.rs"

[[bin]]
name = "nostr-caesar-test-client"
path = "src/client.rs"

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
